# Teepon

./: .env.example  .gitignore  .gitmodules  README.md  docker-compose.yml  package-lock.json
Socket_Server/: package-lock.json  package.json  pnpm-lock.yaml  server.js
backend/: .env.example  Dockerfile  README.md  __init__.py  app.py  config.py  docker-entrypoint.sh  generate_migration.sh  main.py  models.py  pyproject.toml  requirements.txt  routes.py  seed_db.py  setup.sql
backend/Synapse-Copilot/: run.py
backend/Synapse-Copilot/icl_examples/api_selector/: teepon.txt
backend/Synapse-Copilot/icl_examples/planner/: teepon.txt
backend/Synapse-Copilot/model/: api_llm.py
backend/Synapse-Copilot/specs/: teepon_oas.json
backend/migrations/versions/: 0a162a3d7757_6.py  0dab617a80d7_2.py  14b9cca7cafb_4.py  24d66d98663b_3.py  2dfdeb5b5476_3.py  410a9fe737fa_1.py  4dec3d6bb1c9_7.py  520310b0ab7e_1.py  6143494d0b3e_1.py  64156ca960db_2.py  7a4a5bc43f87_5.py  82a896cb6068_2.py
backend/src/: __init__.py  config.py
backend/src/database/: db.py
backend/src/routes/: __init__.py  user_routes.py
frontend/: .env.example  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: layout.js  page.jsx
frontend/app/Calender/: page.jsx
frontend/app/chat/: chat.module.css  page.jsx
frontend/app/profile/: page.jsx  profile.module.css
frontend/app/sign-in/: page.jsx
frontend/components/: ChatLayout.jsx  ChatWindow.jsx  Loader.js  ProtectedRoute.js
frontend/context/: AuthContext.js
frontend/services/: socketService.js
frontend/store/: ChatSlice.js
(+12 files in other folders)
